--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,7 @@ services:
     - target: 5000
       published: 5000
       protocol: tcp
-    networks:
-    -lbg-python-net
+    networks: lbg-python-net
   nginx:
     image: nginx:latest
     ports:
@@ -18,7 +17,6 @@ services:
     - type: bind
       source: ./nginx.conf
       target: /etc/nginx/nginx.conf
-    networks:
-    -lbg-python-net
+    networks: lbg-python-net
 networks:
   lbg-python-net:
